# lmu-geoscience-tools

./: .gitignore  lmu-geoscience-tools.spec  pyproject.toml
.github/workflows/: build.yml
resources/: style.qss
src/: main.py
src/gui/: main_window.py
src/gui/components/: loading_overlays.py  toggle_group.py  upload_box.py
src/tools/feldspar/: classifications.yml  column_aliases.yml  data.py  plot.py  widget.py
src/tools/qapf/: classifications.yml  column_aliases.yml  data.py  plot.py  widget.py
src/tools/tas/: data.py  plot.py  widget.py
src/tools/ternary_diagrams/qapf/: data.py  plot.py  widget.py
tests/tools/feldspar/: test_data.py  test_plot.py
tests/tools/qapf/: test_data.py
tests/tools/tas/: test_data.py  test_plot.py
tests/tools/ternary_diagrams/qapf/: test_data.py  test_plot.py  test_single_triangles_apf.csv  test_single_triangles_qap.csv
